feat: :sparkles: Descripcion agregadas de elementos

--- a/estaño.html
+++ b/estaño.html
@@ -33,7 +33,7 @@
 
     <hr>
     <h3>Descripción</h3>
-    <p>lorem ipsum</p>
+    <p>El estaño es un metal de transición de color blanco plateado, maleable y relativamente blando. Se encuentra en la tabla periódica con el símbolo Sn y el número atómico 50. Es conocido por su capacidad para resistir la corrosión y su resistencia a la oxidación, lo que lo hace útil en diversas aplicaciones industriales y tecnológicas.</p>
     <hr>
     <br><br><br>
     <table>
