--- a/mercurio.html
+++ b/mercurio.html
@@ -33,7 +33,7 @@
 
     <hr>
     <h3>Descripción</h3>
-    <p>lorem ipsum</p>
+    <p>El mercurio es un elemento químico de la tabla periódica con el símbolo Hg y el número atómico 80. Es el único metal que permanece en estado líquido a temperatura ambiente, lo que lo hace único entre los metales. Es conocido también como quicksilver debido a su apariencia brillante y fluidez.</p>
     <hr>
     <br><br><br>
     <table>
