--- a/plomo.html
+++ b/plomo.html
@@ -33,7 +33,9 @@
 
     <hr>
     <h3>Descripción</h3>
-    <p>lorem ipsum</p>
+    <p>El plomo es un metal pesado, tóxico, de color gris azulado y con propiedades que lo hacen fácilmente maleable y denso. Se encuentra en la tabla periódica con el símbolo Pb y el número atómico 82. Debido a su densidad y otras características, ha sido utilizado en una variedad de aplicaciones industriales, aunque su uso ha disminuido debido a sus efectos tóxicos para la salud.
+
+    </p>
     <hr>
     <br><br><br>
     <table>
