--- a/plutonio.html
+++ b/plutonio.html
@@ -33,7 +33,7 @@
 
     <hr>
     <h3>Descripción</h3>
-    <p>lorem ipsum</p>
+    <p>El plutonio es un elemento químico radiactivo de la tabla periódica, con el símbolo Pu y el número atómico 94. Es un metal pesado, muy denso y altamente radiactivo, que fue descubierto en 1940 por los científicos Glenn T. Seaborg, Arthur C. Wahl y Joseph W. Kennedy. El plutonio se ha hecho conocido principalmente por su uso en armas nucleares y en reactores nucleares debido a sus propiedades fisibles.</p>
     <hr>
     <br><br><br>
     <table>
