--- a/titanio.html
+++ b/titanio.html
@@ -33,7 +33,7 @@
 
     <hr>
     <h3>Descripción</h3>
-    <p>lorem ipsum</p>
+    <p>El titanio es un metal de transición, ligero, resistente y altamente duradero, conocido por su excelente resistencia a la corrosión. Se encuentra en la tabla periódica con el símbolo Ti y el número atómico 22. Es el metal de transición más abundante en la corteza terrestre y se encuentra comúnmente en minerales como ilmenita (FeTiO₃) y rutilo (TiO₂).</p>
     <hr>
     <br><br><br>
     <table>
