feat: :sparkles: added different pages

--- a/estaño.html
+++ b/estaño.html
@@ -21,8 +21,8 @@
 
     <table>
         <tr>
-            <td style="width: 50%;"><img src="images/ESTANO.jpg" alt="" width="500"></td>
-            <td>
+            <td style="width: 50% ;"><img src="images/ESTANO.jpg" alt="" width="500"></td>
+            <td style="text-align: center;">
                 <p>Estaño</p>
                 <p>Elemento de baja fusion</p>
                 <p>mineral, procesado</p>
@@ -36,8 +36,8 @@
     <p>El estaño es un metal de transición de color blanco plateado, maleable y relativamente blando. Se encuentra en la tabla periódica con el símbolo Sn y el número atómico 50. Es conocido por su capacidad para resistir la corrosión y su resistencia a la oxidación, lo que lo hace útil en diversas aplicaciones industriales y tecnológicas.</p>
     <hr>
     <br><br><br>
-    <table>
-        <tr>
+    <table border="1">
+        <tr style="text-align: center; width: 50% ;">
             <th>
                 <a href="index.html">Regresar</a>
             </th>
