--- a/index.html
+++ b/index.html
@@ -43,5 +43,27 @@
         </tr>
     </table>
 
+    <hr>
+    <br><br><br>
+    <table style="text-align: center;">
+        <tr>
+            <th>
+                <a>1</a>
+            </th>
+            <th>
+                <a>2</a>
+            </th>
+            <th>
+                <a>3</a>
+            </th>
+            <th>
+                <a>4</a>
+            </th>
+            <th>
+                <a>5</a>
+            </th>
+        </tr>
+    </table>
+
 </body>
 </html>
