feat: :art: center the different pages

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <hr>
     <br>
 
-    <table>
+    <table style="text-align: center; margin: auto;">
         <tr>
             <td><img src="images/ESTANO.jpg" alt="" width="200"></td>
             <td><img src="images/plutonio.png" alt="" width="200"></td>
@@ -45,22 +45,22 @@
 
     <hr>
     <br><br><br>
-    <table style="text-align: center;">
+    <table style="text-align: center; margin: auto;" border="1">
         <tr>
             <th>
-                <a>1</a>
+                <a href="">1</a>
             </th>
             <th>
-                <a>2</a>
+                <a href="">2</a>
             </th>
             <th>
-                <a>3</a>
+                <a href="">3</a>
             </th>
             <th>
-                <a>4</a>
+                <a href="">4</a>
             </th>
             <th>
-                <a>5</a>
+                <a href="">5</a>
             </th>
         </tr>
     </table>
