feat: :construction: started work in contact form for the store

--- a/index.html
+++ b/index.html
@@ -65,5 +65,9 @@
         </tr>
     </table>
 
+    <footer>
+        <a href="cotizaciones.html">Cotizaciones</a>
+    </footer>
+
 </body>
 </html>
