feat: :sparkles: clase sobre modelo de cajas

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 
     <footer>
         <a href="cotizaciones.html">Cotizaciones</a>
+        <a href="bordes.html">bordes</a>
     </footer>
 
 </body>
