feat: :sparkles: cambios sobre maquetacion

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
         <a href="cotizaciones.html">Cotizaciones</a>
         <a href="bordes.html">bordes</a>
         <a href="unidades_medidas.html">unidades</a>
+        <a href="maquetacion.html">maquetación</a>
     </footer>
 
 </body>
