feat: clase de grid

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
         <a href="bordes.html">bordes</a>
         <a href="unidades_medidas.html">unidades</a>
         <a href="maquetacion.html">maquetación</a>
+        <a href="cuadricula.html">cuadricula</a>
     </footer>
 
 </body>
