feat: :art: clase transiciones

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
         <a href="unidades_medidas.html">unidades</a>
         <a href="maquetacion.html">maquetación</a>
         <a href="cuadricula.html">cuadricula</a>
+        <a href="transiciones.html">transiciones</a>
     </footer>
 
 </body>
